--- a/Poliradio/src/app/tab1/tab1.page.html
+++ b/Poliradio/src/app/tab1/tab1.page.html
@@ -28,15 +28,14 @@
       <div class="album-image" style="background-image: url('https://artwork-cdn.7static.com/static/img/sleeveart/00/051/614/0005161476_350.jpg')"></div>
     </div>
   </ion-toolbar>
-
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <div *ngFor = "let post of news">
+    <h1>{{ post.title.rendered }}</h1>
+  </div>
+  <div>
+    <button (click)="previousPage()">Anterior</button>
+    <button (click)="nextPage()">Siguiente</button>
+  </div>
 </ion-content>
