--- a/Poliradio/src/app/header/header.component.scss
+++ b/Poliradio/src/app/header/header.component.scss
@@ -44,7 +44,7 @@ ion-content ion-toolbar {
         background-color: blue;
       }*/
       p {
-        font-size: 1.6rem;
+        font-size: 20px;
         text-align: center;
         margin: 1.5rem 0 0 0;
       }
