--- a/Poliradio/src/app/tab1/tab1.page.html
+++ b/Poliradio/src/app/tab1/tab1.page.html
@@ -1,10 +1,16 @@
 <app-header></app-header>
 <ion-content [fullscreen]="true">
-  <div *ngFor = "let post of news">
+  <div *ngFor="let post of news">
     <h1>{{ post.title.rendered }}</h1>
   </div>
-  <div>
-    <button (click)="previousPage()">Anterior</button>
-    <button (click)="nextPage()">Siguiente</button>
+
+  <div id="contentIcon">
+    <button (click)="previousPage()">
+      <ion-icon name="arrow-back-circle-outline"></ion-icon>
+    </button>
+
+    <button (click)="nextPage()">
+      <ion-icon name="arrow-forward-circle-outline" font-size="100px"></ion-icon>
+    </button>
   </div>
 </ion-content>
