--- a/Poliradio/src/app/tab2/tab2.page.scss
+++ b/Poliradio/src/app/tab2/tab2.page.scss
@@ -18,6 +18,7 @@ ion-content ion-toolbar {
     width: 50%;
     max-width: 100px;
     background-size: cover;
+    border-radius: 50%;
   }
   .player-controls {
     align-items: center;
