--- a/Poliradio/src/app/tab1/tab1.page.scss
+++ b/Poliradio/src/app/tab1/tab1.page.scss
@@ -1,5 +1,14 @@
 ion-content ion-toolbar {
   --background: translucent;
+  background-color: white;
+}
+
+ion-icon {
+  font-size: 45px;
+  background-color: white;
+}
+#contentIcon{
+  background-color: white;
 }
 .audio-player {
   background: white;
@@ -18,6 +27,7 @@ ion-content ion-toolbar {
     width: 50%;
     max-width: 100px;
     background-size: cover;
+    border-radius: 50%;
   }
   .player-controls {
     align-items: center;
@@ -59,5 +69,5 @@ ion-content ion-toolbar {
     &.pause {
       background-image: url('http://www.lukeduncan.me/images/pause-button.png');
     }
-  }
+  } 
 }
