--- a/Poliradio/src/app/tabs/tabs.page.html
+++ b/Poliradio/src/app/tabs/tabs.page.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs class="tabs">
     <ion-tab-bar class="tab" slot="bottom" id="tabs">
       <ion-tab-button tab="tab1" id="tabs">
         <ion-icon name="newspaper-outline"></ion-icon>
