Se añadio angular material

--- a/Poliradio/src/app/tab1/tab1.page.html
+++ b/Poliradio/src/app/tab1/tab1.page.html
@@ -1,16 +1,11 @@
 <app-header></app-header>
 <ion-content [fullscreen]="true">
   <div *ngFor="let post of news">
-    <h1>{{ post.title.rendered }}</h1>
+    <mat-card>{{ post.title.rendered }}</mat-card>
   </div>
 
   <div id="contentIcon">
-    <button (click)="previousPage()">
-      <ion-icon name="arrow-back-circle-outline"></ion-icon>
-    </button>
-
-    <button (click)="nextPage()">
-      <ion-icon name="arrow-forward-circle-outline" font-size="100px"></ion-icon>
-    </button>
+    <button [disabled]="prevDisable" mat-raised-button color="primary" (click)="previousPage()" id="previous">Anterior</button>
+    <button [disabled]="nextDisable" mat-raised-button color="primary" (click)="nextPage()" id="next">Siguiente</button>
   </div>
 </ion-content>
