--- a/Poliradio/src/app/header/header.component.html
+++ b/Poliradio/src/app/header/header.component.html
@@ -1,25 +1,26 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <div class="audio-player">
-      
+
       <div (click)="play()" *ngIf="!isPlaying" id="play-btn"></div>
       <div (click)="stop()" *ngIf="isPlaying" id="play-btn" class="pause"></div>
 
 
       <div class="audio-wrapper" id="player-container" href="javascript:;">
-        <audio  preload="metadata" (loadedmetadata)="control($event)" (timeupdate)="update()" name="media" #audioPlayer (ontimeupdate)="getCurrent()">
+        <audio preload="metadata" (loadedmetadata)="control($event)" (timeupdate)="update()" name="media" #audioPlayer
+          (ontimeupdate)="getCurrent()">
           <source [src]="URL" type="audio/mpeg">
-          </audio>
+        </audio>
       </div>
 
-      
-      
+
+
       <div class="player-controls scrubber">
         <!--Song Name-->
         <p>{{songName}}</p>
         <!--Artist Name-->
         <small>{{artistName}}</small>
-        
+
         <!--
         <span id="seekObjContainer">
           <progress id="seekObj" value="0" max="1"></progress>
@@ -33,8 +34,8 @@
         <img *ngIf="this.albumImage" [src]="this.albumImage" alt="">
       </div>
     </div>
-  </ion-toolbar>  
-  <ion-progress-bar [value] ="progress"> </ion-progress-bar>
-  
+  </ion-toolbar>
+  <ion-progress-bar [value]="progress"> </ion-progress-bar>
+
 
 </ion-header>
