--- a/Poliradio/src/app/tab1/tab1.page.html
+++ b/Poliradio/src/app/tab1/tab1.page.html
@@ -1,11 +1,19 @@
 <app-header></app-header>
 <ion-content [fullscreen]="true">
-  <div *ngFor="let post of news">
-    <mat-card>{{ post.title.rendered }}</mat-card>
-  </div>
 
-  <div id="contentIcon">       
-        <button [disabled]="prevDisable" mat-raised-button color="primary" (click)="previousPage()" id="previous" >Anterior</button>                    
-        <button [disabled]="nextDisable" mat-raised-button color="primary" (click)="nextPage()" id="next">Siguiente</button>                
-  </div>
+  <ion-list>
+    <ion-item *ngFor="let post of scrollArray">
+      <ion-card (click)="openModal(post)">
+
+        <h2>{{ post.title.rendered }}</h2>
+        {{ post.excerpt.rendered }}
+      </ion-card>
+    </ion-item>
+  </ion-list>
+
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+
 </ion-content>
