--- a/Poliradio/src/app/header/header.component.html
+++ b/Poliradio/src/app/header/header.component.html
@@ -13,22 +13,9 @@
         </audio>
       </div>
 
-
-
       <div class="player-controls scrubber">
-        <!--Song Name-->
-        <p>{{songName}}</p>
-        <!--Artist Name-->
+        <p style="font-weight: 700;">{{songName}}</p>
         <small>{{artistName}}</small>
-
-        <!--
-        <span id="seekObjContainer">
-          <progress id="seekObj" value="0" max="1"></progress>
-        </span>
-        <br>
-        <small style="float: left; position: relative; left: 15px;" class="start-time"></small>
-        <small style="float: right; position: relative; right: 20px;" class="end-time"></small>
-        -->
       </div>
       <div class="album-image">
         <img *ngIf="this.albumImage" [src]="this.albumImage" alt="">
