--- a/Poliradio/src/app/tab1/tab1.page.html
+++ b/Poliradio/src/app/tab1/tab1.page.html
@@ -3,10 +3,12 @@
 
   <ion-list>
     <ion-item *ngFor="let post of scrollArray">
-      <ion-card (click)="openModal(post)">
-
-        <h2>{{ post.title.rendered }}</h2>
-        {{ post.excerpt.rendered }}
+      <ion-card class="card" (click)="openModal(post)">
+        <ion-card-title [innerHTML]="post.title.rendered" class="card-title"></ion-card-title>
+        <ion-card-content>
+          <div [innerHTML]="post.excerpt.rendered"></div>
+        </ion-card-content>
+       
       </ion-card>
     </ion-item>
   </ion-list>
