--- a/Poliradio/src/app/tab1/tab1.page.scss
+++ b/Poliradio/src/app/tab1/tab1.page.scss
@@ -3,6 +3,15 @@ ion-content ion-toolbar {
   background-color: white;
 }
 
+.card{
+  width: 100%;
+  
+  .card-title{
+    margin: 0.5%;
+  }
+}
+
+
 ion-icon {
   font-size: 45px;
   background-color: white;
