--- a/Poliradio/src/app/tab1/tab1.page.html
+++ b/Poliradio/src/app/tab1/tab1.page.html
@@ -2,7 +2,7 @@
 <ion-content [fullscreen]="true">
 
   <ion-list>
-    <ion-item *ngFor="let post of scrollArray">
+    <ion-item *ngFor="let post of news$ | async">
       <ion-card (click)="openModal(post)">
 
         <h2>{{ post.title.rendered }}</h2>
