--- a/Poliradio/src/app/tab1/tab1.page.html
+++ b/Poliradio/src/app/tab1/tab1.page.html
@@ -13,7 +13,7 @@
     </ion-item>
   </ion-list>
 
-  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+  <ion-infinite-scroll threshold="5px" (ionInfinite)="doInfinite($event)">
     <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
     </ion-infinite-scroll-content>
   </ion-infinite-scroll>
