--- a/Poliradio/src/app/tab1/tab1.page.scss
+++ b/Poliradio/src/app/tab1/tab1.page.scss
@@ -1,7 +1,7 @@
-ion-content ion-toolbar {
+ion-content {
   --background: translucent;
   background-color: white;
-}
+  }
 
 .card{
   width: 100%;
