--- a/Poliradio/src/app/header/header.component.scss
+++ b/Poliradio/src/app/header/header.component.scss
@@ -4,8 +4,7 @@ ion-content ion-toolbar {
   .audio-player:hover{
     background: light-gray;
     color: #3498DB;
-  }
-
+  }  
   .audio-player {
     background:#1a3882;
    color: whitesmoke;
@@ -36,10 +35,12 @@ ion-content ion-toolbar {
       }
     }
 
-    .player-controls {
+    .player-controls {      
       align-items: center;
       justify-content: center;
       color: #fff;
+      margin-left: 2rem;
+      margin-right: auto;
       //margin-top: 2.5rem;
       flex: 3;
   /*    progress {
@@ -73,7 +74,7 @@ ion-content ion-toolbar {
       background-size: cover;
       width: 50px;
       height: 50px;
-      margin: 1.5rem 0 2rem 2rem;
+      margin: 1.5rem 0 3rem 0.5rem;
       &.pause {
         background-image: url('http://www.lukeduncan.me/images/pause-button.png');
       }
