--- a/Poliradio/src/app/header/header.component.scss
+++ b/Poliradio/src/app/header/header.component.scss
@@ -1,91 +1,71 @@
-ion-content {
-    --background: none;
-    background-image: url('../../assets/audioplayer/fondo.jpeg');
-  }
-  .audio-player:hover{
-    background: light-gray;
-    color: #3498DB;
-  }  
-  .audio-player {
-    background-image: url('../../assets/audioplayer/fondo.jpeg');
-    background-position: center top;
+
+.audio-player:hover {
+  background: light-gray;
+  color: #3498db;
+}
+.audio-player {
+  background-image: url("../../assets/audioplayer/fondo.jpeg");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: whitesmoke;
+  border: 1px solid lighten(#acacac, 20%);
+  font: 150% sans-serif;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-flow: row;
+  height: auto;
+  max-height: 100px;
+  //margin: 4rem 0 4rem 0;
+  .album-image {
     background-repeat: no-repeat;
-    background-size: cover;
-    color: whitesmoke;
-    border: 1px solid lighten(#acacac, 20%);
-    font: 150% sans-serif;
-    width: 100%;
-    text-align: center;
-    display: flex;
-    flex-flow: row;
-    height: auto;
-    max-height: 100px;
-    //margin: 4rem 0 4rem 0;
-    .album-image {
-      background-image: url(../../assets/audioplayer/null-image.png);
-      background-repeat: no-repeat;
     background-position: 50%;
     border-radius: 50%;
     background-size: 100% auto;
-      min-height: 5%;
-      height: auto;
-      max-height: 100%;
-      width: 40%;
-      max-width: 100px;
-      //background-size: cover;
-      //border-radius: 50%;
-      //z-index: 9999;
-      margin: 0.15%;
+    display: flex;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    min-height: 5%;
+    max-height: 100%;
+    width: 30%;
+    max-width: 100px;
+    margin: 0.15%;
 
-      img{
-        border-radius: 50%;
-        padding: 0.5%;
-      }
+    img {
+      border-radius: 50%;
+      padding: 0.5%;
+      width: 80%;
+      height: 80%;
     }
-
-    .player-controls {      
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      margin-left: 2rem;
-      margin-right: auto;
-      //margin-top: 2.5rem;
-      flex: 3;
-  /*    progress {
-        width: 90%;
-      }
-      progress[value] {
-        -webkit-appearance: none;
-        appearance: none;
-        background-color: white;
-        color: blue;
-        height: 5px;
-      }
-      progress[value]::-webkit-progress-bar {
-        background-color: white;
-        border-radius: 2px;
-        border: 1px solid lighten(#acacac, 20%);
-        color: blue;
-      }
-      progress::-webkit-progress-value {
-        background-color: blue;
-      }*/
-      p {
-        font-size: 20px;
-        text-align: center;
-        margin: 1.5rem 0 0 0;
-      }
-      
-    }
-    #play-btn {
-      background-image: url('http://www.lukeduncan.me/images/play-button.png');
-      background-size: cover;
-      width: 50px;
-      height: 50px;
-      margin: 1.5rem 0 3rem 0.5rem;
-      &.pause {
-        background-image: url('http://www.lukeduncan.me/images/pause-button.png');
-      }
-    }
-    
   }
+
+  .player-controls {
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    margin-left: 2rem;
+    margin-right: auto;
+    flex: 3;
+    &.scrubber p {
+      font-size: 0.6em;
+    }
+
+    p {
+      font-size: 20px;
+      text-align: center;
+      margin: 1.5rem 0 0 0;
+    }
+  }
+  #play-btn {
+    background-image: url("http://www.lukeduncan.me/images/play-button.png");
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    margin: 1.5rem 0 3rem 0.5rem;
+    &.pause {
+      background-image: url("http://www.lukeduncan.me/images/pause-button.png");
+    }
+  }
+}
