--- a/Poliradio/src/app/news-modal/news-modal.page.html
+++ b/Poliradio/src/app/news-modal/news-modal.page.html
@@ -10,7 +10,6 @@
 </ion-header>
 <ion-content>
   <div class="content">
-   <div [innerHTML]="post.excerpt.rendered"></div>
-   <div [innerHTML]="post.content.rendered"></div>
+   <div [innerHTML]="post.content.rendered | keepHtml"></div>
   </div>
 </ion-content>
