--- a/Poliradio/src/app/news-modal/news-modal.page.html
+++ b/Poliradio/src/app/news-modal/news-modal.page.html
@@ -10,6 +10,6 @@
 </ion-header>
 <ion-content>
   <div class="content">
-   <div [innerHTML]="post.content.rendered | keepHtml"></div>
+   <div [innerHTML]="content | keepHtml"></div>
   </div>
 </ion-content>
