--- a/Poliradio/src/app/header/header.component.scss
+++ b/Poliradio/src/app/header/header.component.scss
@@ -1,27 +1,34 @@
 
+ion-toolbar, ion-header {
+  --min-width: 100%;
+  
+ }
+
+ .container{
+   width: 100%;
+   height: 90px;
+ }
+
 .audio-player:hover {
   background: light-gray;
   color: #3498db;
 }
 .audio-player {
-  background-image: url("../../assets/audioplayer/fondo.jpeg");
-  background-position: center top;
+
+  position: relative;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
   color: whitesmoke;
-  border: 1px solid lighten(#acacac, 20%);
   font: 150% sans-serif;
   width: 100%;
   text-align: center;
   display: flex;
   flex-flow: row;
-  height: auto;
-  max-height: 100px;
-  //margin: 4rem 0 4rem 0;
+  height: 100%;
   .album-image {
     background-repeat: no-repeat;
     background-position: 50%;
-    border-radius: 50%;
+    border-radius: 5%;
     background-size: 100% auto;
     display: flex;
     height: auto;
@@ -30,14 +37,16 @@
     min-height: 5%;
     max-height: 100%;
     width: 30%;
-    max-width: 100px;
-    margin: 0.15%;
+    max-width: 80px;
+    margin-left: 13%;
+    z-index: 9999;
+
 
     img {
-      border-radius: 50%;
+      border-radius: 5%;
       padding: 0.5%;
-      width: 80%;
-      height: 80%;
+      width: 70%;
+      height: 70%;
     }
   }
 
@@ -45,27 +54,41 @@
     align-items: center;
     justify-content: center;
     color: #fff;
-    margin-left: 2rem;
+    margin-left: 0.1rem;
     margin-right: auto;
-    flex: 3;
+    flex: 2;
     &.scrubber p {
       font-size: 0.6em;
+      text-align:left;
     }
 
     p {
-      font-size: 20px;
-      text-align: center;
+      font-size: 0.5em;
+      text-align: left;
       margin: 1.5rem 0 0 0;
+    }
+    small{
+      display: block;
+      font-size: 0.5em;
+      display: block;
+      transform: translateX(-22.3%);
     }
   }
   #play-btn {
-    background-image: url("http://www.lukeduncan.me/images/play-button.png");
-    background-size: cover;
-    width: 50px;
-    height: 50px;
-    margin: 1.5rem 0 3rem 0.5rem;
+    position: absolute;
+    left:-2.5%;
+    top:-14%;
+    overflow: hidden;
+    background-image: url(../../assets/POLI_RADIO_APP/ON.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 95px;
+    height: 95px;
+    margin: 0.8rem 0 3rem 0.5rem;
     &.pause {
-      background-image: url("http://www.lukeduncan.me/images/pause-button.png");
+      background-image: url(../../assets/POLI_RADIO_APP/OFF.png);
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
     }
   }
 }
