--- a/Poliradio/src/app/tab1/tab1.page.html
+++ b/Poliradio/src/app/tab1/tab1.page.html
@@ -1,5 +1,6 @@
+<div class="container">
 <app-header></app-header>
-<ion-content [fullscreen]="true">
+<ion-content>
   <ion-list>
 
     <ion-item *ngFor="let post of news$ | async">
@@ -7,11 +8,11 @@
         <img *ngIf="post?.featured_media" [src]="post?.featured_media">
         <ion-card-title [innerHTML]="post.title.rendered" class="card-title"></ion-card-title>
         <ion-card-content>
-          <div [innerHTML]="post.excerpt.rendered"></div>
+          <span [innerHTML]="post.excerpt.rendered" class="card-content"></span>
         </ion-card-content>
       </ion-card>
     </ion-item>
-  </ion-list>
+  </ion-list>--verbose
 
   <ion-infinite-scroll threshold="5px" (ionInfinite)="doInfinite($event)">
     <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
@@ -19,3 +20,4 @@
   </ion-infinite-scroll>
 
 </ion-content>
+</div>
