--- a/Poliradio/src/theme/variables.scss
+++ b/Poliradio/src/theme/variables.scss
@@ -4,7 +4,11 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
+
+  --main-color: #0F385A;
+  --main-color-selected: #A6CE38;
+
+
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
@@ -60,7 +64,7 @@
   --ion-color-dark-tint: #383a3e;
 
   /** medium **/
-  --ion-color-medium: #92949c;
+  --ion-color-medium: #A6CE38;
   --ion-color-medium-rgb: 146, 148, 156;
   --ion-color-medium-contrast: #ffffff;
   --ion-color-medium-contrast-rgb: 255, 255, 255;
@@ -156,7 +160,7 @@
     --ion-background-color: #000000;
     --ion-background-color-rgb: 0,0,0;
 
-    --ion-text-color: #ffffff;
+    --ion-text-color: #463131;
     --ion-text-color-rgb: 255,255,255;
 
     --ion-color-step-50: #0d0d0d;
@@ -192,7 +196,7 @@
    */
 
   .md body {
-    --ion-background-color: #121212;
+    --ion-background-color: #0F385A;
     --ion-background-color-rgb: 18,18,18;
 
     --ion-text-color: #ffffff;
@@ -224,6 +228,6 @@
   }
 
   ion-title.title-large {
-    --color: white;
+    --color: #0F385A;
   }
 }
