--- a/Poliradio/src/app/news-modal/news-modal.page.html
+++ b/Poliradio/src/app/news-modal/news-modal.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="toolbar">
     <ion-title>{{post.title.rendered}}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="closeModal()">
