--- a/Poliradio/src/app/header/header.component.scss
+++ b/Poliradio/src/app/header/header.component.scss
@@ -2,40 +2,73 @@
 ion-toolbar, ion-header {
   --min-width: 100%;
   
- }
-
- .container{
-   width: 100%;
-   height: 96px;
- }
-
-.audio-player:hover {
-  background: light-gray;
-  color: #3498db;
 }
+
+.Background{
+  position: relative;
+  
+}
+
+.buttons{
+  position: absolute;
+  top: 0;
+  margin-left: 1.6%;
+  margin-top: 8.9%;
+  max-width: 10%;
+}
+
+
+
+.album-image{
+  position: absolute;
+  top: 0;
+  margin-top: 7%;
+  margin-left: 15%;
+  max-width: 16%;
+  
+}
+
+.info{
+position: absolute;
+top: 0;
+color: white;
+font-size: 12px;
+margin-left: 35%;
+margin-top: 10%;
+}
+
+.Titulo{
+  max-width: 50%;
+  white-space: unset;
+  overflow-wrap: break-word;
+}
+
+
+/*
 .audio-player {
 
   position: relative;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+  
+  background-size: 100% 200%;
   color: whitesmoke;
   font: 150% sans-serif;
   width: 100%;
-  text-align: center;
-  display: flex;
-  flex-flow: row;
   height: 100%;
+  text-align: center;
+  display: flexbox ;
+  flex-flow: row;
   .album-image {
     background-repeat: no-repeat;
     background-position: 50%;
     border-radius: 5%;
     background-size: 100% auto;
     display: flex;
+    display: none;
     height: auto;
     justify-content: center;
     align-items: center;
     min-height: 5%;
-    max-height: 100%;
+    max-height: 80%;
     width: 30%;
     max-width: 80px;
     margin-left: 13%;
@@ -43,15 +76,17 @@ ion-toolbar, ion-header {
 
 
     img {
+      
       border-radius: 5%;
       padding: 0.5%;
-      width: 70%;
-      height: 70%;
+      width: 100%;
+      height: 1000%;
     }
   }
 
   .player-controls {
     display: flex;
+    display: none;
     align-items: baseline;
     justify-content: center;
     flex-direction: column;
@@ -71,20 +106,26 @@ ion-toolbar, ion-header {
     }
   }
   #play-btn {
+    display: none;
     position: absolute;
     left:-2.5%;
     top:-14%;
     overflow: hidden;
-    background-image: url(../../assets/POLI_RADIO_APP/ON.png);
+    background-image: url(../../assets/POLI_RADIO_APP/OFF.png);
+    
     background-repeat: no-repeat;
     background-size: 100% 100%;
     width: 95px;
     height: 95px;
     margin: 0.8rem 0 3rem 0.5rem;
     &.pause {
-      background-image: url(../../assets/POLI_RADIO_APP/OFF.png);
+      background-image: url(../../assets/POLI_RADIO_APP/ON.png);
       background-repeat: no-repeat;
       background-size: 100% 100%;
     }
   }
 }
+*/
+
+
+
