--- a/Poliradio/src/app/tab1/tab1.page.html
+++ b/Poliradio/src/app/tab1/tab1.page.html
@@ -1,6 +1,6 @@
 <div class="container">
-<app-header></app-header>
-<ion-content>
+  <app-header></app-header>
+  <ion-content>
   <div class="loading" *ngIf="!news$">
     <span>Cargando noticias...</span>
   </div>
@@ -8,7 +8,7 @@
 
     <ion-item *ngFor="let post of news$ | async">
       <ion-card class="card" (click)="openModal(post)">
-        <img *ngIf="post?.featured_media" [src]="post?.featured_media">
+      <ion-img *ngIf="post?.loaded" [src]="post?.featured_media"> </ion-img>
         <ion-card-title [innerHTML]="post.title.rendered" class="card-title"></ion-card-title>
         <ion-card-content>
           <span [innerHTML]="post.excerpt.rendered" class="card-content"></span>
