Corrección de bugs
[Solucionado]:Bug que cambiaba el color del texto en el encabezado
[Solucionado]: No se muestra texto "SafeValue must use [property]=binding:" al ver en detalle noticia.

--- a/Poliradio/src/app/news-modal/news-modal.page.html
+++ b/Poliradio/src/app/news-modal/news-modal.page.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar class="toolbar">
-    <ion-title>{{post.title.rendered}}</ion-title>
+    <ion-title class="Title">{{post.title.rendered}}</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="closeModal()">
+      <ion-button class="Title" (click)="closeModal()">
         <ion-icon slot="icon-only" name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
